--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-torch
-torchvision
-torchsummary
-pandas
-Pillow
-matplotlib
-seaborn
-scikit-learn
+numpy==2.3.5
+torch==2.9.1
+torchsummary==1.5.1
+torchvision==0.24.1
+pandas==2.3.3
+pillow==12.0.0
+matplotlib==3.10.7
+seaborn==0.13.2
+scikit-learn==1.7.2 
 pytest
